[metadata]
name = logspec
version = attr: logspec.version.__version__
author = Ricardo Cañuelo
author_email = ricardo.canuelo@collabora.com
description = The Test Log Spectrometer
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True

[options.packages.find]
include = logspec*

[options.package_data]
logspec = *.yaml
