[metadata]
name = logspec
version = attr: logspec.version.__version__
author = Ricardo Cañuelo
author_email = ricardo.canuelo@collabora.com
description = The Test Log Spectrometer
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
install_requires =
    pytest
    pyyaml
    flake8
    pylint

[options.packages.find]
include = logspec*

[options.package_data]
logspec = *.yaml

# The following [flake8] configuration is used to enforce code style while allowing some flexibility:
# - E203: Whitespace before ':' is ignored to comply with PEP 8 when using slicing.
# - E266: Allow multiple leading '#' characters for block comments.
# - E501: Line length is managed by `max-line-length` instead of enforcing 79 characters.
# - W503: Line break before binary operator is allowed as it is preferred in PEP 8.
[flake8]
max-line-length = 88
exclude = .git, .venv, __pycache__, build, dist
ignore = E203, E266, E501, W503
# Specifies per-file ignore rules for linting errors in the project.
# Here we ignore ident issues in the various dicts for our tests.
# - Files under the `tests/` directory will ignore the following error codes:
#   - E121: Continuation line under-indented for hanging indent.
#   - E126: Continuation line over-indented for hanging indent.
#   - E131: Continuation line unaligned for hanging indent.
#   - E122: Continuation line missing indentation or outdented.
per-file-ignores =
    tests/*: E121, E126, E131, E122

[pylint]
max-line-length = 88
# Disable missing module, class, function docstrings and style checks
disable = C0114, C0115, C0116, C0301, C0302, C0326  
ignore-patterns = .git, .venv, __pycache__, build, dist